correction of the centering of the loader on large screen and adjustment of the size of the banner image on tablet and desktop

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -399,10 +399,15 @@ body {
 
 .banner__img > img {
   width: 100%;
-  height: 30em;
+  height: 15em;
   object-fit: cover;
   position: relative;
   z-index: -1;
+}
+@media screen and (min-width: 768px) {
+  .banner__img > img {
+    height: 30em;
+  }
 }
 
 .container {
@@ -715,10 +720,15 @@ body {
 
 .banner__img > img {
   width: 100%;
-  height: 30em;
+  height: 15em;
   object-fit: cover;
   position: relative;
   z-index: -1;
+}
+@media screen and (min-width: 768px) {
+  .banner__img > img {
+    height: 30em;
+  }
 }
 
 .container {
