--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -8,10 +8,13 @@
 
 .banner__img > img {
   width: 100%;
-  height: 30em;
+  height: 15em;
   object-fit: cover;
   position: relative;
   z-index: -1;
+  @include breakpoint(tablets) {
+    height: 30em;
+  }
 }
 .container {
   width: 100%;
